<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_time"
        android:icon="@drawable/ic_time_black_24dp"
        android:title="@string/title_time" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_music_black_24dp"
        android:title="@string/title_music" />

<!--    <item-->
<!--        android:id="@+id/navigation_database"-->
<!--        android:icon="@drawable/ic_database_black_24dp"-->
<!--        android:title="@string/title_database" />-->

    <item
        android:id="@+id/navigation_weather"
        android:icon="@drawable/ic_weather_black_24dp"
        android:title="@string/title_weather" />
</menu>