<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_time"
        android:name="com.example.myapplication.ui.time.TimeFragment"
        android:label="@string/title_time"
        tools:layout="@layout/fragment_time" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.myapplication.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_music"
        android:name="com.example.myapplication.ui.music.MusicFragment"
        android:label="@string/title_music"
        tools:layout="@layout/fragment_music" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_database"-->
<!--        android:name="com.example.myapplication.ui.database.DataBaseFragment"-->
<!--        android:label="@string/title_database"-->
<!--        tools:layout="@layout/fragment_data_base" />-->

    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.example.myapplication.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />
</navigation>