<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.database.DataBaseFragment">

    <LinearLayout
        android:id="@+id/database_sname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_sname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#000000"
            android:padding="20dp"
            android:text="@string/database_textView_sname" />

        <EditText
            android:id="@+id/editText_sname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="25sp"
            android:hint="@string/database_editView_sname" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_sage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#000000"
            android:padding="20dp"
            android:text="@string/database_textView_sage" />

        <EditText
            android:id="@+id/editText_sage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:textSize="25sp"
            android:hint="@string/database_editView_sage"/>
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton_boy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#000000"
            android:layout_weight="1"
            android:text="@string/database_radio_boy" />

        <RadioButton
            android:id="@+id/radioButton_girl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textSize="25sp"
            android:textColor="#000000"
            android:layout_weight="1"
            android:text="@string/database_radio_girl" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/sdept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_sdept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#000000"
            android:paddingLeft="45dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingRight="20dp"
            android:text="@string/database_textView_sdept" />

        <EditText
            android:id="@+id/editText_sdept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textSize="25sp"
            android:inputType="textPersonName"
            android:hint="@string/database_editView_sdept" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/database_btn_bg"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/database_insert" />

        <Button
            android:id="@+id/button_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/database_btn_bg"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/database_update" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/database_btn_bg"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/database_delete" />

        <Button
            android:id="@+id/button_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/database_btn_bg"
            android:text="@string/database_select" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/database_recyclerView"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

</LinearLayout>