<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/time_bg"
    android:id="@+id/fragment_time"
    tools:context=".ui.time.TimeFragment">

    <TextView
        android:id="@+id/textView_time"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="00:00:00"
        android:textColor="@color/time_color"
        android:textSize="90sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/time_btn_start"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:background="@drawable/time_btn_bg"
            android:text="@string/time_start"
            android:textColor="@color/time_color"
            android:textSize="35sp" />

        <Button
            android:id="@+id/time_btn_stop"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:background="@drawable/time_btn_bg"
            android:text="@string/time_stop"
            android:textColor="@color/time_color"
            android:textSize="35sp" />

        <Button
            android:id="@+id/time_btn_reset"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:background="@drawable/time_btn_bg"
            android:text="@string/time_reset"
            android:textColor="@color/time_color"
            android:textSize="35sp" />
    </LinearLayout>

</LinearLayout>