<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/music_bg"
    android:orientation="vertical"
    android:id="@+id/fragment_music"
    tools:context=".ui.music.MusicFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/music_star" />

    <Button
        android:id="@+id/music_btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/music_btn_bg"
        android:text="@string/music_start" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/music_btn_prev"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/music_prev"
            android:textSize="20sp"
            android:layout_marginRight="40dp" />

        <Button
            android:id="@+id/music_btn_pause"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/music_btn_bg"
            android:text="@string/music_pause" />

        <Button
            android:id="@+id/music_btn_next"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/music_next"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp" />

    </LinearLayout>

    <Button
        android:id="@+id/music_btn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/music_btn_bg"
        android:text="@string/music_stop" />

    <TextView
        android:id="@+id/textView_music_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/music_text_color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_music_musicName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/music_text_color" />

    <TextView
        android:id="@+id/textView_music_time"
        android:layout_width="330dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textSize="15sp"
        android:textColor="@color/music_text_color" />

    <SeekBar
        android:id="@+id/music_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>